feat: impl nebulagraph mcp server
Signed-off-by: Chojan Shang <chojan.shang@vesoft.com>

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ NEBULA_HOST=your-nebulagraph-server-host
 NEBULA_PORT=your-nebulagraph-server-port
 NEBULA_USER=your-nebulagraph-server-user
 NEBULA_PASSWORD=your-nebulagraph-server-password
+
+# For integration tests
+RUN_INTEGRATION_TESTS=false # set to true to run integration tests
