feat: add examples
Signed-off-by: Chojan Shang <chojan.shang@vesoft.com>

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ NEBULA_PASSWORD=your-nebulagraph-server-password
 
 # For integration tests
 RUN_INTEGRATION_TESTS=false # set to true to run integration tests
+
+# For examples
+OPENAI_MODEL=your-openai-model
+OPENAI_ENDPOINT=your-openai-endpoint
+OPENAI_API_KEY=your-openai-api-key
